Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0
-
None
-
8dcfb43d8f6bdd9d1331391bb4dfbee73de30658
Description
When compiling Qt 5.4, headers for GLES3 are automatically detected if the build host supports such a feature. However, when deploying the build to a target which does not support GLES3, QtGui breaks as it cannot find some symbols. This is a serious regression as Qt has always behaved well on runtime OpenGL requirements, and it is made worse by the fact that the autodetection cannot be circumvented. The only way around this bug is patching configure.
Ideally, GLES3 support would need to load symbols at runtime (just like other OpenGL codepaths in Qt) or, as a temporary fix, it should be made optional (a switch like -no-es3). At the moment every build on a host which supports GLES3 deployed to a target with no GLES3 support is broken.
Attachments
Issue Links
- is required for
-
QTBUG-43201 Issues to be fixed before 5.4.1
-
- Closed
-